@@ -58,13 +58,13 @@ public class StringToObjectConverter {
         if (String.class.isAssignableFrom(type)) {
             return v;
         } else if (Integer.TYPE.isAssignableFrom(type)) {
-            return Integer.valueOf(v);
+            return new Integer(v);
         } else if (Long.TYPE.isAssignableFrom(type)) {
-            return Long.valueOf(v);
+            return new Long(v);
         } else if (Float.TYPE.isAssignableFrom(type)) {
-            return Float.valueOf(v);
+            return new Float(v);
         } else if (Double.TYPE.isAssignableFrom(type)) {
-            return Double.valueOf(v);
+            return new Double(v);
         } else if (Boolean.TYPE.isAssignableFrom(type)) {
             if ("true".equalsIgnoreCase(v)) {
                 return Boolean.TRUE;
@@ -72,7 +72,7 @@ public class StringToObjectConverter {
                 return Boolean.FALSE;
             }
         } else if (type.isEnum()) {
-            return convertToEnum(ca, v, (Class<? extends Enum<?>>) type);
+            return convertToEnum(ca, v, (Class<? extends Enum>) type);
         } else if (StringToObjectConverter.followsTheValueOfConvention(type)) {
             return convertByValueOfMethod(ca, type, v);
         } else if (isOfTypeCharset(type)) {
@@ -95,24 +95,19 @@ public class StringToObjectConverter {
         }
     }
 
-    // returned value may be null and in most cases it is null.
-    public static Method getValueOfMethod(Class<?> type) {
-        try {
-            return type.getMethod(CoreConstants.VALUE_OF, STING_CLASS_PARAMETER);
-        } catch (NoSuchMethodException e) {
-            return null;
-        } catch (SecurityException e) {
-            return null;
-        }
-    }
-
     static private boolean followsTheValueOfConvention(Class<?> parameterClass) {
-        Method valueOfMethod = getValueOfMethod(parameterClass);
-        if (valueOfMethod == null)
-            return false;
-
-        int mod = valueOfMethod.getModifiers();
-        return Modifier.isStatic(mod);
+        try {
+            Method valueOfMethod = parameterClass.getMethod(CoreConstants.VALUE_OF, STING_CLASS_PARAMETER);
+            int mod = valueOfMethod.getModifiers();
+            if (Modifier.isStatic(mod)) {
+                return true;
+            }
+        } catch (SecurityException e) {
+            // nop
+        } catch (NoSuchMethodException e) {
+            // nop
+        }
+        return false;
     }
 
     private static Object convertByValueOfMethod(ContextAware ca, Class<?> type, String val) {
@@ -125,7 +120,7 @@ public class StringToObjectConverter {
         }
     }
 
-    @SuppressWarnings({ "unchecked", "rawtypes" })
+    @SuppressWarnings("unchecked")
     private static Object convertToEnum(ContextAware ca, String val, Class<? extends Enum> enumType) {
         return Enum.valueOf(enumType, val);
     }
